--- a/app/src/main/res/layout/storage_list_item.xml
+++ b/app/src/main/res/layout/storage_list_item.xml
@@ -28,6 +28,16 @@
                 android:id="@+id/file_item_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="14sp"
+                tools:text="FileName" />
+
+            <TextView
+                android:id="@+id/file_item_magic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:maxLines="1"
+                android:textSize="12sp"
                 tools:text="FileName" />
         </LinearLayout>
     </LinearLayout>
