--- a/app/src/main/res/layout/storage_list_item.xml
+++ b/app/src/main/res/layout/storage_list_item.xml
@@ -36,9 +36,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
+                android:textColor="@color/colorAccent"
                 android:maxLines="1"
+                android:ellipsize="marquee"
                 android:textSize="12sp"
-                tools:text="FileName" />
+                tools:text="file info" />
         </LinearLayout>
     </LinearLayout>
 
