--- a/app/src/main/res/layout/storage_list_item.xml
+++ b/app/src/main/res/layout/storage_list_item.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp">
+    android:background="?android:attr/selectableItemBackground"
+    android:gravity="center_vertical"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="5dp">
+        android:background="@android:color/white"
+        android:gravity="center_vertical">
 
         <ImageView
             android:id="@+id/file_item_icon"
             android:layout_width="64dp"
             android:layout_height="64dp"
             android:padding="5dp"
-            tools:src="@drawable/icon_unknown" />
+            tools:src="@drawable/ic_file_unknown" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -28,6 +30,7 @@
                 android:id="@+id/file_item_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="#666666"
                 android:textSize="14sp"
                 tools:text="FileName" />
 
@@ -37,10 +40,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:textColor="@color/colorAccent"
-                android:ellipsize="marquee"
                 android:textSize="12sp"
                 tools:text="file info" />
         </LinearLayout>
     </LinearLayout>
 
-</android.support.v7.widget.CardView>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:layout_marginLeft="5dp"
+        android:background="#dddddd" />
+</LinearLayout>
